[FIX] html_editor: preserve link color combinations
Steps to reproduce:
- Drag and drop a "Splash Intro" snippet onto the page.
- Inspect the scroll button.
=> The icon uses the `o_cc5` link color from the section.
=> There is not enough contrast between the arrow and the button
   background, making the arrow hard to see.

Before this commit, color combination link rules still targeted links
that were color combination roots themselves. Since [1] added `o_cc5`
on the `s_splash_intro` section, its `a:not(.btn)` rule overrode the
`o_cc1` scroll button color.

After this commit, link color rules skip elements with `o_cc`, so a
link using its own color combination keeps its own colors.

[1]: https://github.com/odoo/odoo/commit/b7a4edb9fa3d

task-6303725

--- a/addons/html_editor/static/src/scss/html_editor.common.scss
+++ b/addons/html_editor/static/src/scss/html_editor.common.scss
@@ -653,7 +653,7 @@ pre {
             // Links
             $-link-color: if($-link, o-color($-link), map-get($theme-colors, 'primary'));
             $-link-hover-color: darken($-link-color, 15%);
-            a:not(.btn), .btn-link {
+            a:not(.btn):not(.o_cc), .btn-link:not(.o_cc) {
                 color: auto-contrast($-link-color, $-bg-color, 'o-cc#{$index}-link');
 
                 &:hover {
